# matmul-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  matmul_driver.cpp  results.txt  run.sh  run_teach_cluster.sh  stderr.txt  stdout.txt
doc/: README.md
include/: def.h  err_code.h  gemm.h  utils.h
src/: gemm.cpp  gemm.cu  utils.cpp
test/: CMakeLists.txt  mm_test.cpp
